added kelvin option

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ button:hover {
     <select id="scale">
       <option value="celsius">Celsius</option>
       <option value="fahrenheit">Fahrenheit</option>
+      <option value="kelvin">Kelvin</option>
     </select>
     <button type="button" onclick="convertTemperature()">Convert</button>
   </form>
