--- a/index.html
+++ b/index.html
@@ -2,60 +2,8 @@
 <html>
 <head>
   <title>Temperature Converter</title>
+  <link rel="stylesheet" href="style.css">
   <style>
-    body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  text-align: center;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px auto;
-  padding: 20px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  max-width: 400px;
-}
-
-label {
-  margin-bottom: 10px;
-}
-
-input[type="number"], select {
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #3e8e41;
-}
-
-#result {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
   </style>
 </head>
 <body>
